chore: fix issue when loading causes tabs to collapse in IndexFilters

--- a/polaris-react/src/components/IndexFilters/IndexFilters.module.scss
+++ b/polaris-react/src/components/IndexFilters/IndexFilters.module.scss
@@ -48,6 +48,11 @@ $spinner-size: 20px;
   }
 }
 
+.DesktopLoading {
+  height: 20px;
+  width: 20px;
+}
+
 .TabsLoading svg {
   display: block;
 }
